--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,12 @@ a{
 img{
     max-width: 100%;
     display: block;
+    height: auto;
+}
+
+.menu-grid li img, .hero img, .sobre img{
+    will-change: transform;
+    backface-visibility: hidden;
 }
 
 ul{
